// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders 1`] = `
.c1 {
  color: blue;
}

.c0 {
  color: #0588cb;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-filter: brightness(125%);
  filter: brightness(125%);
}

<ForwardRef
  href="https://ooni.org"
>
  <ForwardRef
    className="c0"
    color="blue"
    href="https://ooni.org"
    is="a"
  >
    <ForwardRef
      className="c0 c1"
      color="blue"
      href="https://ooni.org"
      is="a"
    >
      <a
        className="c0 c1"
        href="https://ooni.org"
      >
        OONI
      </a>
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`Link renders with prop color 1`] = `
.c1 {
  color: #2f9e44;
}

.c0 {
  color: green8;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-filter: brightness(125%);
  filter: brightness(125%);
}

<ForwardRef
  color="green8"
>
  <ForwardRef
    className="c0"
    color="green8"
    is="a"
  >
    <ForwardRef
      className="c0 c1"
      color="green8"
      is="a"
    >
      <a
        className="c0 c1"
      >
        OONI Green
      </a>
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;
